
parameters:
- new parameter misc/debugsol to specify a debug solution that should be checked during the solve
- fixed typo: heuristics/completesol/maxunkownrate has changed to heuristics/completesol/maxunknownrate
- new parameters: beforepresol, maxlpiter, and maxcontvars in heur_completesol.c

interface:
- added method SCIPsetProbingLPState() to install given LP state and/or norms at the current probing node

performance improvements:
- add and use RESTRICT macro for some pointers

SCIP version 4.0.1
==================

fixed bugs:
- fixed memory leak in OSiL reader when using SOS constraints
- fixed issue related to SCIPcreateFiniteSolCopy not being able to remove all infinite fixings
- fixed issue in SCIPcopyLimits() w.r.t. soft time limit
- improved handling of infinite values in a primal solution in quadratic and nonlinear constraints
- fixed bug in dynamic resizing of hashtables and hashmaps

performance improvements:
- widened a bottleneck in simplifying long signomial sums in a nonlinear constraint
- sorting of parents and children for some expression types is now independent of memory layout

SCIP version 4.0.0
==================

features:
- new Graph induced neighborhood search (GINS) primal heuristic that uses neighborhoods
  based on distances in the variable constraint connectivity graph.
  In addition, the heuristic supports a rolling horizon-like procedure to solve auxiliary problems
  for neighborhoods with increasing distance from the starting neighborhood.
- new primal heuristic LP face that tries to find an integer solution inside the optimal LP face.
- implemented linear time methods for (weighted) median selection for joint arrays of various types
- new statistic computed: "Root LP Estimate" that shows the root LP best-estimate with every pseudo-cost update
- new SCIP_REGRESSION data structure in pub_misc.h to incrementally compute a best-fit line through pairs of observations